Fix popup view bug; add call to action to add to home screen on iOS

--- a/Beocreate2/beo-system/common/beostyle2018.css
+++ b/Beocreate2/beo-system/common/beostyle2018.css
@@ -3691,6 +3691,43 @@ h2 .channel-dot {
 
 /* @end */
 
+#standalone-call-to-action {
+	position: fixed;
+	background-color: var(--main-bg);
+	z-index: 6;
+	bottom: 45px;
+	padding: 0 20px 10px;
+	width: 250px;
+	text-align: center;
+	filter: drop-shadow(0 5px 40px rgba(0,0,0,0.3));
+	margin-left: -125px;
+	box-sizing: border-box;
+	left: 50vw;
+	transition: opacity 0.5s ease, transform 0.5s ease, filter 0.5s ease;
+	opacity: 0;
+	transform: translateY(20px);
+	pointer-events: none;
+}
+
+body:not(.setup) #standalone-call-to-action.visible {
+	opacity: 1;
+	transform: translateY(0);
+	filter: drop-shadow(0 5px 40px rgba(0,0,0,0.3));
+	pointer-events: all;
+}
+
+#standalone-call-to-action:after {
+	content: "";
+  	position: absolute;
+  	top: 100%;
+  	left: 50%;
+  	margin-left: -10px;
+  	border-width: 10px;
+  	border-style: solid;
+  	border-color: var(--main-bg) transparent transparent transparent;
+}
+	
+
 /* @end */
 
 /* @group Setup Navigation */
@@ -4171,6 +4208,21 @@ p.first, h2.first {
 
 .menu-content.no-padding-top {
 	padding-top: 0px !important;
+}
+
+#standalone-call-to-action {
+	bottom: auto;
+	top: 20px;
+	left: auto;
+	margin-right: -125px;
+	margin-left: auto;
+	right: 150px;
+}
+
+#standalone-call-to-action:after {
+  	bottom: 100%;
+  	top: auto;
+  	border-color: transparent transparent var(--main-bg) transparent;
 }
 	
 }
